--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,16 @@ environment:
 dependencies:
     flutter:
         sdk: flutter
-
+    adaptive_theme: ^3.6.0
     cupertino_icons: ^1.0.6
+    flutter_html: ^3.0.0-beta.2
+    flutter_modular: ^6.3.2
+    flutter_smart_dialog: ^4.9.4
+    path_provider: ^2.1.2
     sqflite: ^2.3.3
     sqflite_common_ffi: ^2.3.3
-    path: ^1.9.0
-    path_provider: ^2.1.2
+    window_manager: ^0.3.8
+    provider: ^6.1.2
 
 dev_dependencies:
     flutter_test:
@@ -29,3 +33,4 @@ flutter:
 
     assets:
         - assets/poem.db
+        - assets/images/
