--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sqflite_common_ffi: ^2.3.3
     window_manager: ^0.3.8
     provider: ^6.1.2
+    shared_preferences: ^2.2.2
 
 dev_dependencies:
     flutter_test:
