--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,13 @@ dependencies:
     flutter_html: ^3.0.0-beta.2
     flutter_modular: ^6.3.2
     flutter_smart_dialog: ^4.9.4
+    hive: ^2.2.3
+    hive_flutter: ^1.1.0
     path_provider: ^2.1.2
     sqflite: ^2.3.3
     sqflite_common_ffi: ^2.3.3
     window_manager: ^0.3.8
     provider: ^6.1.2
-    shared_preferences: ^2.2.2
 
 dev_dependencies:
     flutter_test:
