--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
         sdk: flutter
     adaptive_theme: ^3.6.0
     cupertino_icons: ^1.0.6
+    dropdown_button2: ^3.0.0-beta.12
     flutter_html: ^3.0.0-beta.2
     flutter_modular: ^6.3.2
     flutter_smart_dialog: ^4.9.4
